--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <script src="/static/plugin/jquery-3.6.0.slim.js"></script>
         <script src="/static/js/index.js"></script>
         <h1>AJAX Request</h1>
-        <button id="gbutton" type="button" value="GET">GET</button>
-        <button id="pbutton" type="button" value="POST">POST</button>
+        <button id="gbutton" type="button">GET</button>
+        <button id="pbutton" type="button">POST</button>
     </body>
 </html>
